# i2q24_afternoon_interactive

./: README.md  pyproject.toml  requirements.txt
afternoon/notebooks/: 00_transpiling.ipynb  01_distillation_cost.ipynb  02_mapping_routing.ipynb  03_azure_resource_estimator.ipynb  I2Q notebook.ipynb  adder_n28_Cliff+T.qasm  helper_functions.py  notes.md
data/qasm_circuits/: README.md
