[tool.poetry]
name = "i2q24-afternoon-interactive"
version = "0.1.0"
description = ""
authors = ["Jason Chadwick <jchadwick100@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
scipy = "^1.13.0"
matplotlib = "^3.8.4"
qiskit = "^1.0.2"
ipykernel = "^6.29.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
