[tool.poetry]
name = "i2q-24-interactive"
version = "0.1.0"
description = ""
authors = ["Jason Chadwick <jchadwick100@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
scipy = "^1.13.0"
matplotlib = "^3.8.4"
qiskit = "^1.0.2"
ipykernel = "^6.29.4"
networkx = "^3.3"
multiprocess = "^0.70.16"
stim = "^1.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
